Fixes
Block quotes overlap with text. Inconsistent spacing between text and US Air Force Logo
Also seen in:
-https://www.bradmontgomery.com/about/bio/

-https://www.bradmontgomery.com/programs/

-https://www.bradmontgomery.com/programs/extras/

-https://www.bradmontgomery.com/programs/laugh-o-nomics/

-https://www.bradmontgomery.com/programs/happiness-at-work/

-https://www.bradmontgomery.com/programs/master-of-ceremonies/

—------------------------------------------

I’ve attached an example below of how this block should look, I believe it looks much more professional and visually appealing.

https://bradmontgomery.com/about/testimonials/
Inconsistent spacings, absent space where needed

https://bradmontgomery.com/about/testimonials/
The whole testimonials page layout is broken

https://bradmontgomery.com/about/testimonials/
”See more videos” button redirects to same testimonials page. Also text color becomes white on hover but background color doesnt change which results in invisible button text. (see below)

https://bradmontgomery.com/about/testimonials/

Inconsistent spacing, absent space where needed

Also seen in:
-https://www.bradmontgomery.com/about/awards/

https://www.bradmontgomery.com/

The image on the left getting cut from the bottom.
Block-quote in an awkward inconsistent position.
Inconsistent spacing.

Arrows on hover

--- a/css/additional-css.css
+++ b/css/additional-css.css
@@ -1172,7 +1172,7 @@ body .av-special-heading .av-special-heading-tag {float: none;}
 
 .full-width-image--text--section .template-page.content .entry-content-wrapper .text__content .av-special-heading:not(:first-child) h2 {margin-top: 100px !important; }
 
-.innerpage--heading-title-section p,.innerpage--heading-title-section p * {text-align: center; margin: 0 !important; color: #fff !important; font-size: 24px !important;font-weight: 600 !important; }
+.innerpage--heading-title-section p,.innerpage--heading-title-section p * {text-align: center; margin: 0; color: #fff !important; font-size: 24px !important;font-weight: 600 !important; }
 
 /******** testimonial page ********/
 
