--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,25 +27,27 @@ a:focus{
     }
 }
 
-.avia-testimonial{
-    .avia-testimonial_inner{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        .avia-testimonial-meta{
-            .avia-testimonial-image{
-                display: flex;
-                justify-content: flex-end;
-                img{
-                    width: auto;
+.testimonial--fullwidth--section {
+    .avia-testimonial{
+        .avia-testimonial_inner{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .avia-testimonial-meta{
+                .avia-testimonial-image{
+                    display: flex;
+                    justify-content: flex-end;
+                    img{
+                        width: auto;
+                    }
                 }
             }
-        }
-        .avia-testimonial-content{
-            
-            .avia-testimonial-markup-entry-content{
-                p{
-                    font-size: 30px !important;
+            .avia-testimonial-content{
+                
+                .avia-testimonial-markup-entry-content{
+                    p{
+                        font-size: 30px !important;
+                    }
                 }
             }
         }
@@ -117,3 +119,65 @@ div#footer{
     } 
 }
 
+.usairforce--full-section{
+    .entry-content-wrapper{
+        .overlay-image{
+            position: static;
+        }
+        .av-special-heading{
+            margin: 0 0 30px 0;
+        }
+    } 
+} 
+
+.innerpage--heading-title-section{
+    p{
+        margin-top: 40px;
+    }
+} 
+.testimonial--more--videos--section{
+    a.avia-button {
+        background: #fff;
+        color: #000;
+        margin: 20px 0 0 0 ; 
+        transition: 0.5s;
+        &:hover{
+            background-color: #dff3ff !important;
+            color: #000 !important;
+            *{
+                color: #000 !important;
+            }
+        }
+    }
+} 
+
+.planner--fullwidth--video--section{
+    .template-page h3 {
+        margin: 60px 0 60px 0; 
+    }
+}
+
+#top{
+    .av-slideshow-ui.av-loop-endless{
+        .avia-slideshow-arrows{
+            &> a{
+                display: none;
+            }
+
+        } 
+
+    } 
+
+} 
+
+.full-width-image--text--section{
+    .template-page.content{
+        .entry-content-wrapper{
+            .testimonial_content{
+                .avia-button-wrap{
+                    margin-top: 40px;
+                }
+            } 
+        } 
+    } 
+} 
